--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
     tags: ["*"]
+  workflow_dispatch:
+    branches: [main]
+    tags: ["*"]
   pull_request:
     branches: [main]
 
