More workflow changes

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -96,24 +96,24 @@ jobs:
       - name: nuget push
         run: dotnet nuget push "*.nupkg" --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }}
 
-  nuget-push-prod:
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: build
+  # nuget-push-prod:
+    # runs-on: ubuntu-latest
+    # if: startsWith(github.ref, 'refs/tags/')
+    # needs: build
 
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: nugets
+    # steps:
+      # - uses: actions/download-artifact@v2
+        # with:
+          # name: nugets
 
-      - uses: actions/setup-dotnet@v1.8.2
-        with:
-          dotnet-version: 2.1.401
-          source-url: https://api.nuget.org/v3/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
+      # - uses: actions/setup-dotnet@v1.8.2
+        # with:
+          # dotnet-version: 2.1.401
+          # source-url: https://api.nuget.org/v3/index.json
+        # env:
+          # NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
 
-      - run: dotnet nuget push nugets/*.nupkg --skip-duplicate
+      # - run: dotnet nuget push nugets/*.nupkg --skip-duplicate
 
   release-artifacts:
     runs-on: ubuntu-latest
